Fixed tests, sort of.
Basically, I can't find a way to use some Keyed items, like PotionTypes
because they rely on a Bukkit Server and I can't get into that to mock
it, yet.